TEST_PROGRAMS/INVALID/maxim_gorshkov/invalid1.min
# Invalid Program 1
# Maxim Gorshkov
# 260397155
#
# Error: String contains characters which are invalid

var invalid: string;

invalid = "abc\|";
